tests/nonstrict_import/nonstrict_import.exp
Error: imports.js:4
  4: import {FooObj} from './nonstrict_exports.js'; // Error
             ^^^^^^ nonstrict-import: Dependencies of a strict module must also be strict!

Error: imports.js:5
  5: import * as All from './nonstrict_exports.js'; // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ nonstrict-import: Dependencies of a strict module must also be strict!

Error: imports.js:8
  8: import BarObj from './nonstrict_exports.js'; // Error
            ^^^^^^ nonstrict-import: Dependencies of a strict module must also be strict!

Error: imports.js:11
 11: const BarObj2 = require("./nonstrict_exports"); // Error
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ nonstrict-import: Dependencies of a strict module must also be strict!

Error: imports.js:20
 20: import NonstrictLib from './nonstrict_lib.js' // Error
            ^^^^^^^^^^^^ nonstrict-import: Dependencies of a strict module must also be strict!


Found 5 errors
